--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           alt="おみくじ"
         />
       </div>
+      <div id="js-result-text" class="omikuji-result-text"></div>
       <button type="button" class="omikuji-button" id="js-button">
         おみくじを引く
       </button>
